basic half-edge mesh

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
         <meta charset="UTF-8">
         <title>Computational Geometry</title>
         <script language="javascript" type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.min.js"></script>
-        <script language="javascript" type="text/javascript" src="DataStructures.js"></script>
-        <script language="javascript" type="text/javascript" src="Functions.js"></script>
+        <script language="javascript" type="text/javascript" src="HalfEdgeMesh.js"></script>
         <script language="javascript" type="text/javascript" src="Main.js"></script>
     </head>
 
