--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Computational Geometry</title>
         <script language="javascript" type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.min.js"></script>
         <script language="javascript" type="text/javascript" src="HalfEdgeMesh.js"></script>
+        <script language="javascript" type="text/javascript" src="BinarySearchTree.js"></script>
         <script language="javascript" type="text/javascript" src="Main.js"></script>
     </head>
 
